<resources>
    <string name="app_name">Chaty</string>
    <string name="create_awesome_account">Create Awesome Account</string>
    <string name="chaty_is_yours">Chaty Is Yours</string>
    <string name="registration_form">Registration Form</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="main_activity">Main Activity</string>
    <string name="login_form">Login Form</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests_fragment">Requests Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="my_words">My Words...</string>
    <string name="save_my_words">Save My Words</string>
    <string name="find_friend">Find Friend</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="send_request">Send Friend Request</string>
    <string name="hey_there_i_m_using_chaty">Hey There, I\'m using Chaty!!</string>
    <string name="display_name">Display Name</string>
    <string name="timeline">Timeline Chat</string>
    <string name="title_activity_timeline">TimelineActivity</string>
</resources>
