<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abubakrsokarno.chaty.RegisterActivity">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_above="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/registration_form"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/textView"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="52dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="text|textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="52dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="52dp" />

    <Button
        android:id="@+id/registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="148dp" />




</RelativeLayout>
