<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abubakrsokarno.chaty.StartActivity">
    <include layout="@layout/app_bar_layout" android:id="@+id/main_toolbar" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:text="@string/chaty_is_yours"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="215dp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/create_awesome_account" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/start_reg_btn"
        android:layout_alignStart="@+id/start_reg_btn"
        android:layout_below="@+id/start_reg_btn"
        android:layout_marginTop="37dp"
        android:text="@string/login" />
</RelativeLayout>
