<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.abubakrsokarno.chaty.ProfileActivity">

    <include
        android:id="@+id/setting_bar"
        layout="@layout/app_bar_layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/searched_profile_image"
        android:layout_width="204dp"
        android:layout_height="166dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/avatar2"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:id="@+id/searched_user_name"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/searched_user_status"
        android:layout_below="@+id/searched_profile_image"
        android:layout_marginTop="29dp"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="242dp" />

    <TextView
        android:id="@+id/searched_user_status"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/searched_profile_image"
        android:layout_below="@+id/searched_user_name"
        android:layout_marginTop="11dp"
        android:maxHeight="50dp"
        android:text="@string/hey_there_i_m_using_chaty"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />


    <Button
        android:id="@+id/searched_send_request_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/send_request"
        android:textColor="@color/colorWhite" />

</RelativeLayout>